fix: Solved that click the parent element of secondary menu to jump

--- a/source/css/_common/scaffolding/utils.styl
+++ b/source/css/_common/scaffolding/utils.styl
@@ -2,6 +2,10 @@
   clearfix();
 }
 
+.nopointer {
+  pointer-events: none;
+}
+
 // UI components
 // ----------------------------------------
 popover-bg-color = alpha(#000, .7);
